fixed layout issues across labels on multiple pages.

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,3 +1,16 @@
+// ==========================================================================
+// Header
+// ==========================================================================
+  header.content-header{
+    padding-top:$gutter;
+    h1.heading-xlarge{
+      margin-bottom:0.3em;
+    }
+  }
+// ==========================================================================
+// Inputs
+// ==========================================================================
+
 input[type=text],
 input[type=email],
 input[type=tel]{
@@ -10,13 +23,16 @@ input[type=tel]{
 textarea.form-control{
   width:100%;
 }
+
+// ==========================================================================
+// Form layout
+// ==========================================================================
 .form-inputs{
   @include cf();
 }
 .form-actions{
   margin-top:2em;
 }
-// --------------
 .label-column {
   .block-label {
     @include column(0.5, $cycle: 2, $gutter: 2);
@@ -31,11 +47,10 @@ textarea.form-control{
     display: block;
   }
 }
+// ==========================================================================
+// Page layout
+// ==========================================================================
 .main-column{
   @include col(2/3);
   //@include edit();
-}
-.form-group + p{
-  margin-top:0;
-  clear:both;
 }
