--- a/app/assets/stylesheets/elements/_forms.scss
+++ b/app/assets/stylesheets/elements/_forms.scss
@@ -3,8 +3,6 @@
 
 // Form group is used to wrap label and input pairs
 .form-group {
-  float: left;
-  width: 100%;
   clear: both;
   @include contain-floats;
   margin-bottom: $gutter-half;
