--- a/app/assets/stylesheets/forms/_form-chunky-labels.scss
+++ b/app/assets/stylesheets/forms/_form-chunky-labels.scss
@@ -50,6 +50,7 @@ span.block-label {
   }
   &.large-label{
     margin-right:0;
+    float:none;
   }
 }
 
